# aoc24

./: .gitignore
2024/rust/: Cargo.toml  day03.bench.txt  day04.bench.txt  day05.bench.txt  day06.bench.txt  day07.bench.txt  day08.bench.txt  day09.bench.txt  day10.bench.txt  day11.bench.txt  day12.bench.txt  day13.bench.txt  day14.bench.txt  day15.bench.txt  day16.bench.txt  justfile
2024/rust/daily-template/: Cargo.toml
2024/rust/daily-template/benches/: benchmarks.rs
2024/rust/daily-template/src/: part1.rs  part2.rs
2024/rust/day01/: Cargo.toml
2024/rust/day01/src/: part1.rs  part2.rs
2024/rust/day02/: Cargo.toml
2024/rust/day02/src/: part1.rs  part2.rs
2024/rust/day03/: Cargo.toml
2024/rust/day03/benches/: benchmarks.rs
2024/rust/day03/src/: part1.rs  part2.rs
2024/rust/day04/: Cargo.toml
2024/rust/day04/benches/: benchmarks.rs
2024/rust/day04/src/: part1.rs  part2.rs
2024/rust/day05/: Cargo.toml
2024/rust/day05/benches/: benchmarks.rs
2024/rust/day05/src/: part1.rs  part2.rs
2024/rust/day06/: Cargo.toml
2024/rust/day06/benches/: benchmarks.rs
2024/rust/day06/src/: part1.rs  part2.rs
2024/rust/day06/src/part1/: maze.rs
2024/rust/day06/src/part2/: maze.rs
2024/rust/day07/: Cargo.toml
2024/rust/day07/benches/: benchmarks.rs
2024/rust/day07/src/: part1.rs  part2.rs
2024/rust/day08/: Cargo.toml
2024/rust/day08/benches/: benchmarks.rs
2024/rust/day08/src/: part1.rs  part2.rs
2024/rust/day09/: Cargo.toml
2024/rust/day09/benches/: benchmarks.rs
2024/rust/day09/src/: part1.rs  part2.rs
2024/rust/day10/: Cargo.toml
2024/rust/day10/benches/: benchmarks.rs
2024/rust/day10/src/: part1.rs  part2.rs
2024/rust/day11/: Cargo.toml
2024/rust/day11/benches/: benchmarks.rs
2024/rust/day11/src/: part1.rs  part2.rs
2024/rust/day12/: Cargo.toml
2024/rust/day12/benches/: benchmarks.rs
2024/rust/day12/src/: lib.rs  part1.rs  part1pg.rs  part2.rs
2024/rust/day13/: Cargo.toml
2024/rust/day13/benches/: benchmarks.rs
2024/rust/day13/src/: parsers.rs  part1.rs  part2.rs  types.rs
2024/rust/day14/: Cargo.toml
2024/rust/day14/benches/: benchmarks.rs
2024/rust/day14/src/: lib.rs  parsers.rs  part1.rs  part2.rs  types.rs
2024/rust/day15/: Cargo.toml  output1.txt  output2.txt
2024/rust/day15/benches/: benchmarks.rs
2024/rust/day15/src/: lib.rs  part1.rs  part2.rs  types.rs  types2.rs
2024/rust/day16/: Cargo.toml
2024/rust/day16/benches/: benchmarks.rs
2024/rust/day16/src/: part1.rs  part2.rs
