[workspace]
members = [
    "day*",
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
]
default-members = ["day*"]
resolver = "2"

[workspace.dependencies]
divan = "0.1.7"
glam = "0.29.0"
itertools = "0.13.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
rayon = "1.10.0"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
thiserror = "2.0.3"
tracing = "0.1.41"

[workspace.dependencies.miette]
version = "7.4"
features = ["fancy"]

[workspace.dependencies.test-log]
version = "0.2.13"
features = ["trace"]
default-features = false

[workspace.dependencies.tracing-subscriber]
version = "0.3.18"
features = [
    "fmt",
    "env-filter",
]
