[package]
name = "day10"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools.workspace = true
nom.workspace = true
miette.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day10-bench"
path = "benches/benchmarks.rs"
harness = false
