[package]
name = "day15"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools.workspace = true
nom.workspace = true
miette.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
glam.workspace = true

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day15-bench"
path = "benches/benchmarks.rs"
harness = false
