[package]
name = "day16"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools.workspace = true
nom.workspace = true
miette.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pathfinding = "4.14.0"
glam.workspace = true

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day16-bench"
path = "benches/benchmarks.rs"
harness = false
